fixed alignments

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,14 +7,9 @@ a:hover {
 	text-decoration: none;
 }
 
-h2 {
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
 #banner {
 	background-color: #000;
-	padding: 10px;
+	padding: 20px;
 	padding-top: 50px;
 	padding-bottom: 50px;
 
@@ -87,4 +82,8 @@ h2 {
 
 .logoContainer:hover .logoLabel {
 	font-size: 100%;
+}
+
+.container-fluid {
+	padding: 20px;
 }
